# project-mlops

./: requirement.txt  setup.sh
MLOPS/: .gitignore  Makefile  README.md  jupyter_lab_config.py  pyproject.toml  requirements.in  requirements.txt
MLOPS/data/processed/: eda_summary.json
MLOPS/notebooks/: 01_EDA.ipynb
MLOPS/src/data/: process_data.py
MLOPS/src/mlops_project/: __init__.py
MLOPS/src/models/: train.py
MLOPS/tests/: test_placeholder.py
